gitops/entity-store/base/entity-change-feed.yaml
apiVersion: v1
kind: Service
metadata:
  name: entity-change-processor
  namespace: entity-store
  labels:
    app.kubernetes.io/name: entity-change-processor
    app.kubernetes.io/part-of: hpdc-platform
    app.kubernetes.io/component: entity-store
spec:
  selector:
    app.kubernetes.io/name: entity-change-processor
  ports:
    - name: http
      port: 8080
      targetPort: http
